public/css/landing-page.css
html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%; }

body {
  margin: 0;
}

.home-image-wrapper{
   background: linear-gradient(
      rgba(0, 0, 0, 0.6), 
      rgba(0, 0, 0, 0.6)
    ), url("../images/bg.jpg") no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover; 
  height: 100vh;
  width: 100vw;
  text-align: center;
}

a:link, a:visited, a:hover, a:active   {
    text-decoration: none;
    color: white;
}

.button-discover, .button-signin, .button-signup{
    padding:20px;
    width: 10%;
    height: 5%;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    margin: 1%;
    background-color: rgba(0, 0, 0, 0.0);
    border: 1px solid grey;
    color: white;
    link-style-type: none;
}

.button-discover:hover, .button-signin:hover , .button-signup:hover{
    background-color: rgba(0, 0, 0, 0.5);
}

.header-title {
     position: relative;
     color: rgba(255, 255, 255, 0.8); 
     font-family: 'Helvetica Neue', sans-serif; 
     font-size: 150px; 
     font-weight: bold; 
     letter-spacing: -1px; 
     line-height: 1;
     text-align: center; 
     top: 10%;  
}  

@media (max-width: 900px) {
    .header-title {
      font-size: 80px;
    }
    .button-discover, .button-signin, .button-signup {
      width: 20%;
      height: 15%; 
      top: 50vh;}      
 }

